# lab-sftp

./: Makefile  bigfile.txt  client.c  tar.sh
checkpoint/: README.md
include/libsftp/: logger.h
src/: CMakeLists.txt  auth.c  channel.c  dh.c  kex.c  packet.c  session.c  sftp.c
